Np 47916 ticket owner should be user from request (#1899)
* work in progress

* work in progress

* fixing test